<resources>
    <string name="app_name">SBCaT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Refresh Resources-->
    <string name="action_settings">Refresh Period</string>
    <string-array name="refresh_options">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <!--Navigation Resources-->
    <string name="nav_contacts">Contacts</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_housing">Housing</string>
    <string name="nav_prayer_partners">Prayer Partners</string>
    <string name="nav_free_day">Free Day Ideas</string>
    <string name="nav_hq">HQ Info</string>
    <string name="nav_refresh">Refresh</string>
    <string name="nav_logo">SBCaT Logo</string>
    <string name="nav_rescan">Rescan QR</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>

    <!--welcome resources-->
    <string name="welcome_header">Welcome to Code-a-Thon!</string>
    <string name="notifications_header">Notifications</string>

    <!--Housing resources-->
    <string name="map_button">Get directions</string>
    <string name="phone_button">Call</string>
    <string name="cancel_button">Cancel</string>

    <!--Schedule resources-->
    <string name="contact_button">Contact Button</string>

    <!--Connection resources-->
    <string name="retry_connection_button">Retry Connection?</string>
    <string name="rescan_qr_button">Rescan QR?</string>
    <!--Information Page resournces-->
    <string name="bullet_custom">&#9654;</string>

    <!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->

    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>

</resources>
