<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications"/>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contacts"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_schedule"/>
        <item
            android:id="@+id/nav_housing"
            android:icon="@drawable/ic_house"
            android:title="@string/nav_housing"/>
        <item
            android:id="@+id/nav_prayer"
            android:icon="@drawable/ic_group"
            android:title="@string/nav_prayer_partners"/>
        <item
            android:id="@+id/nav_free_day"
            android:icon="@drawable/ic_mountains"
            android:title="@string/nav_free_day"/>
        <item
            android:id="@+id/nav_HQ_info"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_hq"/>
        <item
            android:id="@+id/nav_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/nav_refresh"
            />
        <item
            android:id="@+id/nav_rescan"
            android:icon="@drawable/ic_camera"
            android:title="@string/nav_rescan"
            />
    </group>

</menu>
